--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/git.jpeg"
             alt="Profile picture"
             class="about-pic"
           />
