--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Abilaash Radly Harison profile picture" />
+        <img src="./assets/1.png" alt="Abilaash Radly Harison profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
