--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <span></span>
           <span></span>
           <span></span>
-        </div>
+        </div>                          
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
@@ -275,11 +275,11 @@
             <div class="article-container">
               <img
                 src="./assets/project-2.png"
-                alt="Project 2"
+                alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Project Twin</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -299,11 +299,11 @@
             <div class="article-container">
               <img
                 src="./assets/project-3.png"
-                alt="Project 3"
+                alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Project T</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
