Project one link update

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/AbiCosta/'"
+                onclick="location.href='https://github.com/AbiCosta/SL-Safari-Webpage.git'"
               >
                 Github
               </button>
