--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">SL ~ SaFari</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
