--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/SL3.jpg"
                 alt="Project 1"
                 class="project-img"
               />
