--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/AbiCosta/'"
+                onclick="location.href='https://slsafari.netlify.app/'"
               >
                 Live Demo
               </button>
